# aryanpoonacha-rust-data-processing-individual-project-2

./: Cargo.toml  CarsDB.db  Makefile  README.md
.devcontainer/: setup.sh
.github/workflows/: deploy.yml
src/: extract.rs  query.rs  transform_load.rs
